[gd_scene load_steps=7 format=3 uid="uid://bs8qjh5ne3u8l"]

[ext_resource type="Texture2D" uid="uid://cr1k7pct7qu6s" path="res://Assets/background.png" id="1_4e8cu"]
[ext_resource type="Script" uid="uid://b53hnf3xsmwt1" path="res://Scipts/viginere_cipher.gd" id="1_cl0gp"]
[ext_resource type="FontFile" uid="uid://bil17e4ufdpeo" path="res://Assets/Pixel Game.otf" id="2_cl0gp"]
[ext_resource type="Texture2D" uid="uid://dpqx52q8ga8bt" path="res://Assets/go-back-arrow-3.png" id="4_4e8cu"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_djo6w"]
texture = ExtResource("1_4e8cu")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4e8cu"]
bg_color = Color(0.721569, 0.623529, 0.992157, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
corner_detail = 16

[node name="ViginereCipher" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_left = -1.0
offset_right = -1.0
script = ExtResource("1_cl0gp")

[node name="Panel" type="Panel" parent="."]
layout_mode = 0
offset_left = -12.0
offset_right = 2509.0
offset_bottom = 1820.0
theme_override_styles/panel = SubResource("StyleBoxTexture_djo6w")

[node name="Viginere" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -221.5
offset_top = 95.0
offset_right = 221.5
offset_bottom = 217.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("2_cl0gp")
theme_override_font_sizes/font_size = 60
text = "Viginere Cipher"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Key" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 1485.0
offset_top = 374.0
offset_right = 1589.0
offset_bottom = 436.0
theme_override_fonts/font = ExtResource("2_cl0gp")
theme_override_font_sizes/font_size = 60
text = "Key :"

[node name="CipherText" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 1481.0
offset_top = 587.0
offset_right = 1765.0
offset_bottom = 649.0
theme_override_fonts/font = ExtResource("2_cl0gp")
theme_override_font_sizes/font_size = 60
text = "Cipher Text :"

[node name="PlainText" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 1483.0
offset_top = 480.0
offset_right = 1743.0
offset_bottom = 542.0
theme_override_fonts/font = ExtResource("2_cl0gp")
theme_override_font_sizes/font_size = 60
text = "Plain Text :"

[node name="Key2" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 1837.0
offset_top = 372.0
offset_right = 1941.0
offset_bottom = 434.0
theme_override_fonts/font = ExtResource("2_cl0gp")
theme_override_font_sizes/font_size = 60

[node name="CipherText2" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 1837.0
offset_top = 585.0
offset_right = 2121.0
offset_bottom = 647.0
theme_override_fonts/font = ExtResource("2_cl0gp")
theme_override_font_sizes/font_size = 60

[node name="PlainText2" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 1837.0
offset_top = 478.0
offset_right = 2097.0
offset_bottom = 540.0
theme_override_fonts/font = ExtResource("2_cl0gp")
theme_override_font_sizes/font_size = 60

[node name="ViginereGrid" type="GridContainer" parent="."]
layout_mode = 0
offset_left = 209.0
offset_top = 378.0
offset_right = 209.0
offset_bottom = 378.0
theme_override_constants/h_separation = 47
theme_override_constants/v_separation = 48
columns = 26

[node name="Halphabet" type="HBoxContainer" parent="."]
layout_mode = 2
offset_left = 192.0
offset_top = 293.0
offset_right = 232.0
offset_bottom = 293.0
grow_vertical = 2
theme_override_constants/separation = 28
metadata/_edit_use_anchors_ = true

[node name="Valphabet" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 131.0
offset_top = 356.0
offset_right = 171.0
offset_bottom = 396.0
theme_override_constants/separation = 1
metadata/_edit_use_anchors_ = true

[node name="back" type="Button" parent="."]
layout_mode = 0
offset_left = 148.0
offset_top = 87.0
offset_right = 284.0
offset_bottom = 223.0
theme_override_icons/icon = ExtResource("4_4e8cu")

[node name="Encrypt" type="Button" parent="."]
offset_left = 1475.0
offset_top = 1532.0
offset_right = 1890.0
offset_bottom = 1623.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("2_cl0gp")
theme_override_font_sizes/font_size = 60
theme_override_styles/normal = SubResource("StyleBoxFlat_4e8cu")
text = "Encrypt"

[node name="Decrypt" type="Button" parent="."]
offset_left = 1956.0
offset_top = 1533.0
offset_right = 2371.0
offset_bottom = 1624.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("2_cl0gp")
theme_override_font_sizes/font_size = 60
theme_override_styles/normal = SubResource("StyleBoxFlat_4e8cu")
disabled = true
text = "Decrypt"

[connection signal="pressed" from="back" to="." method="_on_back_pressed"]
[connection signal="pressed" from="Encrypt" to="." method="_on_encrypt_pressed"]
[connection signal="pressed" from="Decrypt" to="." method="_on_decrypt_pressed"]
